--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -46,7 +46,7 @@
       <strong class="font-bold">Link Invalid!</strong>
       <p class="block sm:inline mt-2">Link-ul de resetare a parolei este invalid, posibil pentru că a fost deja folosit. Vă rugăm să solicitați o nouă resetare a parolei.</p>
       <div class="mt-4">
-         <a href="{% url 'accounts:password_reset' %}" class="font-bold text-red-700 hover:text-red-900 underline">Solicită o nouă resetare</a>
+         <a href="{% url 'conturi:resetare_parola' %}" class="font-bold text-red-700 hover:text-red-900 underline">Solicită o nouă resetare</a>
       </div>
     </div>
   {% endif %}
