--- a/payments/templates/payments/payment_cancel.html
+++ b/payments/templates/payments/payment_cancel.html
@@ -16,9 +16,9 @@
         </div>
     {% endif %}
 
-    <p class="text-lg text-gray-700 mb-6">Your payment process was cancelled. You have not been charged.</p>
+    <p class="text-lg text-gray-700 mb-6">Procesul de plată a fost anulat. Nu ați fost taxat.</p>
 
-    <a href="{% url 'payments:plan_list' %}" class="inline-block bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded transition duration-300 mr-4">View Plans</a>
-    <a href="{% url 'accounts:company_dashboard' %}" class="inline-block bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded transition duration-300">Go to Dashboard</a>
+    <a href="{% url 'plati:planuri' %}" class="inline-block bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded transition duration-300 mr-4">Vezi Planuri</a>
+    <a href="{% url 'conturi:panou_companie' %}" class="inline-block bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded transition duration-300">Mergi la Panou de Control</a>
 </div>
 {% endblock %}
