--- a/templates/accounts/profile_edit_form.html
+++ b/templates/accounts/profile_edit_form.html
@@ -46,7 +46,7 @@
 
     {# Submit Button #}
     <div class="pt-4 flex justify-end gap-3">
-         <a href="{% url 'accounts:company_dashboard' %}" class="inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+         <a href="{% url 'conturi:panou_companie' %}" class="inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
             Anulează
         </a>
         <button type="submit"
