--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -38,7 +38,7 @@
   </form>
 
   <div class="mt-4 text-center">
-    <a href="{% url 'accounts:login' %}" class="text-sm text-emerald-600 hover:underline">Înapoi la Autentificare</a>
+    <a href="{% url 'conturi:autentificare' %}" class="text-sm text-emerald-600 hover:underline">Înapoi la Autentificare</a>
   </div>
 </div>
 {% endblock %}
