--- a/templates/registration/signup_done.html
+++ b/templates/registration/signup_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign Up Complete - JoburiExpress{% endblock %}
+{% block title %}Înregistrare Completă - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="max-w-lg mx-auto mt-10 bg-white p-8 rounded-lg shadow-md border border-gray-200">
