--- a/templates/registration/signup_form.html
+++ b/templates/registration/signup_form.html
@@ -26,7 +26,7 @@
       {% endif %}
   </p>
 
-  <form method="post" class="space-y-6">
+  <form method="post" enctype="multipart/form-data" class="space-y-6">
     {% csrf_token %}
 
     {% if form.non_field_errors %}
@@ -168,26 +168,7 @@
               </div>
             {% endif %}
         </div>
-         {# Date of Birth #}
-        <div>
-            <label for="{{ form.date_of_birth.id_for_label }}" class="block text-sm font-medium text-gray-700 mb-1">{{ form.date_of_birth.label }}</label>
-            {{ form.date_of_birth }}
-             {% if form.date_of_birth.errors %}
-              <div class="mt-1 text-xs text-red-600">
-                {% for error in form.date_of_birth.errors %}<p>{{ error }}</p>{% endfor %}
-              </div>
-            {% endif %}
-        </div>
-         {# City of Residence #}
-        <div>
-            <label for="{{ form.city_of_residence.id_for_label }}" class="block text-sm font-medium text-gray-700 mb-1">{{ form.city_of_residence.label }}</label>
-            {{ form.city_of_residence }}
-             {% if form.city_of_residence.errors %}
-              <div class="mt-1 text-xs text-red-600">
-                {% for error in form.city_of_residence.errors %}<p>{{ error }}</p>{% endfor %}
-              </div>
-            {% endif %}
-        </div>
+
     {% endif %}
 
     {# --- Company Specific Fields --- #}
@@ -244,16 +225,6 @@
          </div>
          {# Username #}
          <div>
-            <label for="{{ form.username.id_for_label }}" class="block text-sm font-medium text-gray-700 mb-1">Nume utilizator</label> {# Translated #}
-            {{ form.username }}
-             {% if form.username.errors %}
-              <div class="mt-1 text-xs text-red-600">
-                {% for error in form.username.errors %}<p>{{ error }}</p>{% endfor %}
-              </div>
-            {% endif %}
-        </div>
-        {# Username #}
-        <div>
             <label for="{{ form.username.id_for_label }}" class="block text-sm font-medium text-gray-700 mb-1">Nume utilizator</label>
             {{ form.username }}
              {% if form.username.errors %}
